--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 			<h3>Data-processing:</h3>
 			<h6>Data cleaning</h6>
 			The data set provides data that can be used as it is without any cleaning required. 
-			Ininitally, I wanted to remove the adverts that had no money spent on them as this 
+			Initially, I wanted to remove the adverts that had no money spent on them as this 
 			would be considered no advert and would skew the graph which shows factors that effect
 			adverts and products being used themselves. However I decided against this because, 
 			after filtering these, I found that 71 ADs which were "no budget" had a greater than
