add hover effect

--- a/index.html
+++ b/index.html
@@ -138,11 +138,7 @@
 		<!-- Load d3.js -->
 		<script src="https://d3js.org/d3.v4.js"></script>
 
-		<!-- Color Scale -->
-		<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
-
-
-		<script src="dataViz.js"></script>
+		<script src="script.js"></script>
 
 	</body>
 </html>
